# rust-microservices-architecture

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md  docker-compose.yml
.secrets/: dev.env.example  prod.env.example  staging.env.example
auth-service/: CLAUDE.md  Cargo.toml  Dockerfile
auth-service/chart/: Chart.yaml  values-dev.yaml  values-prod.yaml  values-staging.yaml  values.yaml
auth-service/chart/charts/: microservice-0.1.0.tgz
auth-service/migrations/00000000000001_create_auth_users/: down.sql  up.sql
auth-service/migrations/00000000000002_create_oauth_clients/: down.sql  up.sql
auth-service/migrations/00000000000003_create_authorization_codes/: down.sql  up.sql
auth-service/migrations/00000000000004_create_refresh_tokens/: down.sql  up.sql
auth-service/src/: cache.rs  config.rs  db.rs  errors.rs  lib.rs  main.rs
auth-service/src/controllers/: health_controller.rs  mod.rs
auth-service/src/controllers/v1/: auth_controller.rs  client_controller.rs  mod.rs  oauth_controller.rs
auth-service/src/models/: auth_user.rs  authorization_code.rs  dto.rs  mod.rs  oauth_client.rs  refresh_token.rs  token_claims.rs
auth-service/src/repositories/: auth_user_repository.rs  authorization_code_repository.rs  mod.rs  oauth_client_repository.rs  refresh_token_repository.rs
auth-service/src/services/: auth_service.rs  kafka_service.rs  mod.rs  oauth_service.rs  token_service.rs
auth-service/tests/: api_tests.rs
docker/: CLAUDE.md
nginx/: nginx.conf
postman/: Rust_Microservices.postman_collection.json  overlay.json
scripts/: deploy-services.sh  migrate-all-dev.sh  migrate-auth-dev.sh  (+7 more)
shared/: CLAUDE.md  Cargo.toml
shared/src/: cache.rs  db.rs  errors.rs  health.rs  lib.rs  test_utils.rs
shared/src/middleware/: jwt_auth.rs  mod.rs  scopes.rs
user-service/: CLAUDE.md  Cargo.toml  Dockerfile  docker-compose.yml
user-service/.github/workflows/: ci.yml
user-service/chart/: Chart.yaml  values-dev.yaml  values-prod.yaml  values-staging.yaml  values.yaml
user-service/chart/charts/: microservice-0.1.0.tgz
user-service/migrations/users/: up.sql
user-service/src/: cache.rs  db.rs  errors.rs  kafka.rs  lib.rs  main.rs
user-service/src/controllers/: health_controller.rs  mod.rs
user-service/src/controllers/v1/: user_controller.rs
user-service/src/middleware/: jwt_auth.rs  scopes.rs
user-service/src/models/: mod.rs  user.rs
user-service/src/repositories/: user_repository.rs
user-service/src/services/: user_service.rs
user-service/tests/: api_tests.rs
(+50 files in other folders)
