[workspace]
members = [
    "auth-service",
    "user-service",
    "shared",
    "postman/generator",
]
resolver = "3"

[workspace.dependencies]
actix-web = "4"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "chrono", "macros"] }
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
utoipa = { version = "5", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }
dotenvy = "0.15"
rdkafka = { version = "0.36", features = ["cmake-build"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
actix-web-prom = "0.9"
actix-rt = "2"
