[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
jsonwebtoken = { workspace = true }
utoipa = { workspace = true }
dotenvy = { workspace = true }
