[package]
name = "user-service"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
actix-web = { workspace = true }
dotenvy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
jsonwebtoken = { workspace = true }
rdkafka = { workspace = true }
tokio = { workspace = true }
redis = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
actix-web-prom = { workspace = true }

[dev-dependencies]
actix-rt = { workspace = true }
